# collatr-factory-simulator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROMPT_build.md  PROMPT_plan.md  README.md  docker-compose.realistic.yaml  docker-compose.yml  pyproject.toml  ralph.sh  requirements-dev.txt  requirements.txt
config/: factory-foodbev.yaml  factory.yaml
configs/: collatr-edge-foodbev.toml  collatr-edge-packaging.toml  collatr-edge-realistic.toml
docs/: validation-spikes.md
plans/: BUG-modbus-setpoint-writeback.md  WORKFLOW.md  consolidated-review-action-plan.md  phase-0-independent-review.md  phase-0-progress.md  phase-0-review.md  phase-0-tasks.json  phase-0-validation-spikes.md  phase-1-core-engine-modbus.md  phase-1-fix-verification.md  phase-1-independent-review.md  phase-1-progress.md  phase-1-review.md  phase-1-tasks.json  phase-2-acceptance-test.md  phase-2-independent-review.md  phase-2-opcua-mqtt-scenarios.md  phase-2-progress.md  phase-2-review.md  phase-2-tasks.json  phase-2.1-independent-review.md  phase-2.1-progress.md  phase-2.1-review.md  phase-2.1-scenario-auto-scheduling.md  phase-2.1-tasks.json  phase-3-acceptance-test.md  phase-3-fnb-profile.md  phase-3-independent-review.md  phase-3-progress.md  phase-3-review.md  phase-3-tasks.json  phase-4-independent-review.md  phase-4-progress.md  phase-4-review.md  phase-4-scenarios-data-quality.md  phase-4-tasks.json  phase-5-fix-verification.md  phase-5-independent-review.md  phase-5-progress.md  phase-5-review.md  (+32 more)
prd/: 01-overview-and-goals.md  02-simulated-factory-layout.md  02b-factory-layout-food-and-beverage.md  03-protocol-endpoints.md  03a-network-topology.md  04-data-generation-engine.md  05-scenario-system.md  06-configuration.md  07-technology-stack.md  README.md  (+14 more)
(+199 files in other folders)
