[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatr-factory-simulator"
version = "0.1.0"
description = "Manufacturing factory simulator over industrial protocols (Modbus TCP, OPC-UA, MQTT)"
requires-python = ">=3.12"
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["src"]

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (Docker Compose)",
    "slow: long-running tests (7-day simulation runs); skip with -m 'not slow'",
    "performance: benchmark tests; skip with -m 'not performance'",
    "acceptance: acceptance tests verifying PRD Section 11; skip with -m 'not acceptance'",
]

# ── ruff ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["factory_simulator"]

# ── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pymodbus.*",
    "asyncua.*",
    "paho.*",
    "uvloop",
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true
